# surge

./: .clang-format  CMakeLists.txt  compile_shaders.sh  main.cpp
cmake/: compile_shaders.cmake
include/: ShadowMap.hpp  Skybox.hpp  VikingRoom.hpp
include/surge/: Audio.hpp  Buffer.hpp  Camera.hpp  Command.hpp  Context.hpp  Cycle.hpp  Defaults.hpp  Descriptor.hpp  Image.hpp  Model.hpp  Pipeline.hpp  Presenter.hpp  Renderer.hpp  Shader.hpp  Swapchain.hpp  Texture.hpp  UserInteraction.hpp  Window.hpp  debug.hpp  types.hpp  utils.hpp
include/surge/asset/: Animation.hpp  Asset.hpp  Catalogue.hpp  GltfAsset.hpp  LoadedModel.hpp  LoadedTexture.hpp  Material.hpp  Mesh.hpp  Node.hpp  ObjAsset.hpp  Scene.hpp  Skin.hpp
include/surge/geometry/: Shape.hpp  Vertex.hpp  shapes.hpp
include/surge/math/: BoundingBox.hpp  Matrix.hpp  Vector.hpp  angles.hpp  math.hpp  matrices.hpp
include/surge/overlay/: AssetOverlay.hpp  Font.hpp  LoadedOverlay.hpp  NodeOverlay.hpp  Overlay.hpp
shaders/: asset.frag  asset.vert  bbox.frag  bbox.vert  gltf_animated.frag  gltf_animated.vert  gltf_static.frag  gltf_static.vert  offscreen.vert  quad.frag  quad.vert  scene.frag  scene.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  ui.vert
